test/corpus/atom.txt
==================
nil
==================
0n
---
(S
  (E
    (n
      (nil))))

==================
infinity
==================
0w
---
(S
  (E
    (n
      (infinity))))

==================
binairy
==================
0b0110
---
(S
  (E
    (n
      (binairy))))

==================
integer
==================
1
---
(S
  (E
    (n
      (int))))

==================
hexadecimal
==================
0xab
---
(S
  (E
    (n
      (hex))))

==================
number
==================
1.5
---
(S
  (E
    (n
      (number))))

==================
exponential
==================
1e-2
---
(S
  (E
    (n
      (exponential))))

==================
duration
==================
1h2m3s
---
(S
  (E
    (n
      (duration))))

==================
name
==================
abc
---
(S
  (E
    (n
      (name))))

==================
string
==================
"def"
---
(S
  (E
    (n
      (string))))
