test/corpus/dyadic.txt
==================
addition
==================
1+1
---
(S
  (E
    (nve
      (n
        (int))
      (v
        (V))
      (n
        (int)))))

==================
int division
==================
4!2
---
(S
  (E
    (nve
      (n
        (int))
      (v
        (V))
      (n
        (int)))))

==================
number division
==================
4%2
---
(S
  (E
    (nve
      (n
        (int))
      (v
        (V))
      (n
        (int)))))

==================
multiplication
==================
4*2
---
(S
  (E
    (nve
      (n
        (int))
      (v
        (V))
      (n
        (int)))))

==================
multiplication
==================
4*2
---
(S
  (E
    (nve
      (n
        (int))
      (v
        (V))
      (n
        (int)))))

==================
match
==================
4~2
---
(S
  (E
    (nve
      (n
        (int))
      (v
        (V))
      (n
        (int)))))

==================
equal
==================
1=1
---
(S
  (E
    (nve
      (n
        (int))
      (v
        (V))
      (n
        (int)))))
