test/corpus/strand.txt
==================
stranded
==================
1 2
---
(S
  (E
    (te
      (n
        (int))
      (n
        (int)))))

==================
group stranded
==================
( 1 2 3
  4 5 6 )
---
(S
  (E
    (n
      (group
        (E
          (n
            (strand
              (int)
              (int)
              (int)))
          (n
            (strand
              (int)
              (int)
              (int))))))))
